...
            // 使用 a - z  aa-zz的方法命名
            val size = CHARACTER.size
            val name = if (index < size) {
                CHARACTER[index].toString()
            } else if (index < size * size) {
                val first = index / (size * size)
                val second = index % (size * size)
                "${CHARACTER[first]}${CHARACTER[second]}"
            } else {
                nextMethod()
            }

            // 处理点击事件
...
